--- a/src/styles/Login.css
+++ b/src/styles/Login.css
@@ -16,21 +16,22 @@
 }
 
 .login-card {
-    border: 1px solid;
+    /* border: 1px solid; */
     border-color: rgb(47, 47, 46);
-    border-radius: 5px;
+    border-radius: 15px;
     padding: 10px 20px 30px 20px;
     pointer-events: all;
     align-items: center;
     justify-content: center;
     text-align: center;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
 }
 
 .input {
     padding: 10px;
     width: 250px;
     height: 30px;
-    border: 1px solid rgb(47, 47, 46);
+    border: 1px solid rgb(205, 202, 202);
     border-radius: 5px;
     font-size: 16px;
     background: transparent;
@@ -43,7 +44,7 @@
     width: 200px;
     font-size: 16px;
     color: white;
-    background-color: #f53131;
+    background-color: #040404;
     border: none;
     border-radius: 5px;
     cursor: pointer;
@@ -51,7 +52,7 @@
 }
 
 .submit-button:hover {
-    background-color: #f9a3a3;
+    background-color: #646464;
 }
 
 .update-button {
@@ -60,7 +61,7 @@
     width: 200px;
     font-size: 16px;
     color: white;
-    background-color: #2c8b27;
+    background-color: #040404;
     border: none;
     border-radius: 5px;
     cursor: pointer;
@@ -68,7 +69,7 @@
 }
 
 .update-button:hover {
-    background-color: #a3f9a3;
+    background-color: #646464;
 }
 
 .error {
@@ -86,10 +87,10 @@
 }
 
 .dont-text{
-    color: rgb(27, 31, 134);
+    color: #040404;
     font-size: 14px;
 }
 
 .dont-text:hover {
-    color: rgb(132, 128, 225);
+    color: #646464;
 }
